makefooter git commit -mmakefooter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="fortopbar">
         <div class="container-fluid container-xl">
 
             <div class="top-menu">
@@ -1632,7 +1632,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-ite d-none">
+                                <div class="carousel-item">
                                     <div class="specialProductWrapper">
                                         <div class="row">
                                             <div class="col-6">
@@ -1779,7 +1779,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-ite d-none">
+                                <div class="carousel-item">
                                     <div class="specialProductWrapper">
                                         <div class="row">
                                             <div class="col-6">
@@ -2470,7 +2470,109 @@
         <!--__________________________latest product End__________________________________-->
 
     </section>
+    <!--_______________________________Footer Area Starts_______________________________________________-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="footercontentwrap">
+                        <div class="footerlogo py-4"><img src="img/logo.png" alt="Flipmart"></div>
+                        <p>Lorem amet consectetur adip isicing elit.
+                            ipsum dolor sit amet consectetur.
+                        </p>
+                        <div class="socialArea">
+                            <ul class="d-flex">
+                                <li class="firstli"><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a class="" href=""><i class="fab fa-twitter"></i></a></li>
+                                <li><a class="" href=""><i class="fab fa-google-plus-g"></i></a></li>
+                                <li><a class="" href=""><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a class="" href=""><i class="fab fa-pinterest-p"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="infoWrapper">
+                        <div class="infoTitle">
+                            <h3 class="py-4">INFORMATION</h3>
+                            <h4>About Us</h4>
+                        </div>
+                        <div class="listwrapper">
+                            <ul>
+                                <li><a href="">Delivery information</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                                <li><a href="">Trems and Condition</a></li>
+                                <li><a href="">Contuct Us</a></li>
+                            </ul>
+                        </div>
 
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="accountwrapper">
+                        <h3 class="py-4">MY ACCOUNT</h3>
+                        <div class="accountLiat">
+                            <ul>
+                                <li><a href="">My account</a></li>
+                                <li><a href="">Order history</a></li>
+                                <li><a href="">My Wishlist</a></li>
+                                <li><a href="">Shipping and Returns</a></li>
+                                <li><a href="">Newslitter</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="extrasWrapper">
+                        <div class="extrasTitle">
+                            <h3 class="py-4">EXTRAS</h3>
+
+                        </div>
+                        <div class="listwrapper">
+                            <ul>
+                                <li><a href="">Brands</a></li>
+                                <li><a href="">Gift certificate</a></li>
+                                <li><a href="">Affilite</a></li>
+                                <li><a href="">Specials</a></li>
+                                <li><a href="">policy</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="contactwrapper">
+                        <h3 class="py-4">CONTACT INFO</h3>
+                        <div class="contactLiat">
+                            <ul>
+                                <li>
+                                    <p>Address:<a href=""> 2548 bogura,kahaloo,paikor</a></p>
+                                </li>
+                                <li>
+                                    <p>PHONE:<a href=""> 0173224234</a></p>
+                                </li>
+                                <li>
+                                    <p>FAX:<a href=""> 3123-123-133</a></p>
+                                </li>
+
+                                <li>
+                                    <p>E-mail:<a href=""> piyasm16@gmail.com</a></p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="topbarwrap d-flex justify-content-end">
+            <div class="topbar ">
+                <a class="btn" href="#fortopbar"><i class="fas fa-angle-double-up"></i></a>
+            </div>
+        </div>
+
+
+    </footer>
+    <!--_______________________________Footer Area End_______________________________________________-->
 
     <!--____________________________js file___________________________________-->
     <script src="js/bootstrap.bundle.min.js"></script>
