--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/demo.css">
     <!--____________________________Responsive file________________________________________-->
-    <link rel="stylesheet" href="css/Extralarge.css">
-    <link rel="stylesheet" href="css/Desktops,large.css">
-    <link rel="stylesheet" href="css/Smallscreens,laptops.css">
-    <link rel="stylesheet" href="css/display769-992.css">
-    <link rel="stylesheet" href="css/tablet.css">
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/Device_responsive/x-sm-device.css">
+    <link rel="stylesheet" href="css/Device_responsive/sm-Smalldevices.css">
+    <link rel="stylesheet" href="css/Device_responsive/md-Mediumdevices.css">
+    <link rel="stylesheet" href="css/Device_responsive/lg-Largedevices.css">
+    <link rel="stylesheet" href="css/Device_responsive/X-Largedevices.css">
+    <link rel="stylesheet" href="css/Device_responsive/XX-Largedevices.css">
 
 </head>
 
@@ -180,7 +180,7 @@
         </div>
     </header>
     <!--_________________________Main Section________________________________----->
-    <section class="mt-4" id="topSection">
+    <section class="py-4" id="topSection">
         <div class="container-fluid container-xl">
             <div class="row">
                 <div class="col-lg-2 col-md-3">
@@ -271,7 +271,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-lg-2 watchCol ">
+                <div class="col-lg-2 watchCol">
                     <div class="watch-div py-2">
                         <div class="watch-content">
                             <h4>Watches</h4>
@@ -291,7 +291,7 @@
         </div>
     </section>
     <!--________________Shop now section________________-->
-    <section id="shopNow">
+    <section id="shopNow" class="py-3">
         <div class="container-fluid container-xl">
             <div class="row">
                 <div class="col-2">
@@ -301,7 +301,8 @@
                         </div>
 
                     </div>
-                    <div class="ourService">
+                    <!--____________OHR Srevice_______________-->
+                    <div class="ourService my-4">
                         <div class="title">
                             <h3>OUR SERVICE</h3>
                         </div>
@@ -479,7 +480,7 @@
                                     <p>Free Shipping on All Orders</p>
                                 </div>
                                 <div class="col-7 colText">
-                                    <p>valid On all on order untill This Week Use Offer
+                                    <p>Valid On all on order untill This Week Use Offer
                                         Code:<span>"SHIPFREE"</span>.</p>
                                 </div>
                                 <div class="col-2 colText">
