--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                         <li><a class="dropdown-item text-center" href="#">MY PROFILE</a></li>
 
                                         <li><a class="dropdown-item text-center" href="#">CARD</a></li>
-                                        <li><a class="dropdown-item text-center" href="#">FAVIORIT</a></li>
+                                        <li><a class="dropdown-item text-center" href="#">FAVORITE</a></li>
                                         <li><a class="dropdown-item text-center" href="#">LOGIN</a></li>
                                         <li><a class="dropdown-item text-center" href="#">LOGOUT</a></li>
                                     </ul>
