--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="android-chrome-icon" sizes="512x512" href="img/favicon-file/-chrome-512x512.png">
+
+    <!--_______________________________Favicon_________________________________-->
+    <link rel="android-chrome-icon" sizes="512x512" href="img/favicon-file/android-chrome-512x512.png">
     <link rel="android-chrome-icon" sizes="192x192" href="img/favicon-file/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-file/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-file/favicon-32x32.png">
@@ -53,21 +55,20 @@
                             <div
                                 class="ContentWrapper d-flex justify-content-lg-end justify-content-center align-items-center">
                                 <div class="currency">
-                                    <label class="text-white" for="cars">Currency:</label>
+                                    <label class="text-white" for="">Currency:</label>
                                     <select name="" id="currency">
                                         <option value="taka">USD</option>
-                                        <option value="usd">taka</option>
-                                        <option value="rupee">rupee</option>
-                                        <option value="ruble">ruble</option>
+                                        <option value="usd">TAKA</option>
+                                        <option value="rupee">RUPEE</option>
+                                        <option value="ruble">RUBLE</option>
                                     </select>
                                 </div>
                                 <div class="language px-3">
-                                    <label for="cars" class="text-white">Language:</label>
+                                    <label for="" class="text-white">Language:</label>
                                     <select name="" id="language">
                                         <option value="taka">ENG</option>
-                                        <option value="usd">bangla</option>
-                                        <option value="rupee">spanis</option>
-                                        <option value="ruble">hindi</option>
+                                        <option value="usd">BAN</option>
+                                        <option value="ruble">HINDI</option>
                                     </select></div>
                                 <div class="wishlist pt-3 text-white">
                                     <p>Wishlist (0)</p>
@@ -454,7 +455,7 @@
                         <div class="newswrapper mx-2">
                             <img src="img/airmail.png" alt="">
                             <p class="text-center">Get e-mail updates about your latest shop and special offers.</p>
-                            <form action="">
+                            <form action=" ">
                                 <input type="email" placeholder="Your email address">
                                 <button type="submit" class="btn mt-3">SUBSCRIBE</button>
                             </form>
@@ -547,7 +548,7 @@
                                     </div>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                            <img src="img/dabulequtation.png" class="d-block w-100" alt="...">
                                             <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                                 Cum nesciunt Lorem ipsum.
                                             </p>
@@ -560,7 +561,7 @@
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                            <img src="img/dabulequtation.png" class="d-block w-100" alt="...">
                                             <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                                 Cum nesciunt Lorem ipsum. </p>
                                             <div class="imgTextWrapper d-flex">
@@ -572,7 +573,7 @@
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                            <img src="img/dabulequtation.png" class="d-block w-100" alt="...">
                                             <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                                 Cum nesciunt Lorem ipsum.</p>
                                             <div class="imgTextWrapper d-flex">
@@ -2548,12 +2549,12 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                        <img src="img/dabulequtation.png" class="d-block w-100" alt="hire">
                                         <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                             Cum nesciunt Lorem ipsum.
                                         </p>
                                         <div class="imgTextWrapper d-flex">
-                                            <img src="img/hirestyle.png" alt="">
+                                            <img src="img/hirestyle.png" alt="hire">
                                             <div class="textWrapper px-2">
                                                 <h4>Piyas</h4>
                                                 <p>Customer</p>
@@ -2561,11 +2562,11 @@
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                        <img src="img/dabulequtation.png" class="d-block w-100" alt="hire">
                                         <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                             Cum nesciunt Lorem ipsum. </p>
                                         <div class="imgTextWrapper d-flex">
-                                            <img src="img/hirestyle.png" alt="">
+                                            <img src="img/hirestyle.png" alt="hire">
                                             <div class="textWrapper px-2">
                                                 <h4>Mondol</h4>
                                                 <p>Customer</p>
@@ -2573,11 +2574,11 @@
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/dabule qutation.png" class="d-block w-100" alt="...">
+                                        <img src="img/dabulequtation.png" class="d-block w-100" alt="dabule">
                                         <p class="text-center">Lorem ipsum, dolor sit amet consec adipisi elit.
                                             Cum nesciunt Lorem ipsum.</p>
                                         <div class="imgTextWrapper d-flex">
-                                            <img class="w-100" src="img/hirestyle.png" alt="">
+                                            <img class="w-100" src="img/hirestyle.png" alt="hire">
                                             <div class="textWrapper px-2">
                                                 <h4>Diana laurn</h4>
                                                 <p>Customer</p>
